fix dark mode

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body {
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     margin: 0;
-    color: #030101
+    
 }
 
 main {
@@ -51,5 +51,11 @@ a {
 	html {
 		background-color: #2c3038;
 		color: #fbfefe;
+	}
+}
+
+@media (prefers-color-scheme: light) {
+	html {
+		color: #030101;
 	}
 }
